--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root{
+  border-style: solid;
+  border-color: darkseagreen;
+  border-radius: 15px;
+  width: fit-content;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  word-wrap: break-word;
+}
+
+button{
+  border: none;
+  background-color: darkslategray;
+  text-align: center;
+  color: white;
+  padding-top: 3px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+}
+
+video{
+  border-radius: 15px;
+}
+
+p{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  align-content: center;
+  color: whitesmoke;
+}
+
+body{
+  background-color: #111120;
 }
