--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ code {
   padding-top: 5px;
   margin-left: auto;
   margin-right: auto;
-  word-wrap: break-word;
 }
 
 button{
@@ -37,6 +36,10 @@ p{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   align-content: center;
   color: whitesmoke;
+  padding: 10px;
+  width: 500px;
+  word-wrap: break-word;
+
 }
 
 body{
